Finder добавил класс ArgsName